--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,7 +13,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #f78e1e;
+  background: #ED9FD6;
   height: 50px;
   width: 50px;
   border-radius: 2px;
